--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@types/node": "20.12.12",
     "@types/react": "18.3.2",
     "@types/react-dom": "18.3.0",
+    "axios": "^1.7.4",
     "beautiful-react-hooks": "^5.0.2",
     "framer-motion": "^11.2.4",
     "next": "^14.2.3",
