--- a/package.json
+++ b/package.json
@@ -22,13 +22,19 @@
     "@types/react-dom": "18.3.0",
     "axios": "^1.7.4",
     "beautiful-react-hooks": "^5.0.2",
+    "chart.js": "^4.4.4",
+    "chartjs-adapter-moment": "^1.0.1",
     "framer-motion": "^11.2.4",
+    "jalali-moment": "^3.3.11",
+    "moment": "^2.30.1",
     "next": "^14.2.3",
     "rc-slider": "^10.6.2",
     "react": "18.3.1",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "18.3.1",
     "react-hooks-global-state": "^2.1.0",
     "react-hot-toast": "^2.4.1",
+    "react-icons": "^5.3.0",
     "react-swipeable": "^7.0.1",
     "react-use": "^17.5.0",
     "react-use-keypress": "^1.3.1",
