--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "beautiful-react-hooks": "^5.0.2",
     "chart.js": "^4.4.4",
     "chartjs-adapter-moment": "^1.0.1",
+    "cookies-next": "^4.2.1",
+    "dotenv": "^16.4.5",
     "framer-motion": "^11.2.4",
     "jalali-moment": "^3.3.11",
     "moment": "^2.30.1",
@@ -35,6 +37,7 @@
     "react-hooks-global-state": "^2.1.0",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.3.0",
+    "react-spinners": "^0.14.1",
     "react-swipeable": "^7.0.1",
     "react-use": "^17.5.0",
     "react-use-keypress": "^1.3.1",
