--- a/package.json
+++ b/package.json
@@ -37,6 +37,8 @@
     "react-hooks-global-state": "^2.1.0",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.3.0",
+    "react-paginate": "^8.2.0",
+    "react-query": "^3.39.3",
     "react-spinners": "^0.14.1",
     "react-swipeable": "^7.0.1",
     "react-use": "^17.5.0",
