--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@tailwindcss/aspect-ratio": "^0.4.2",
     "@tailwindcss/forms": "^0.5.7",
     "@tailwindcss/typography": "^0.5.13",
+    "@tinymce/tinymce-react": "^5.1.1",
     "@types/glidejs__glide": "^3.6.5",
     "@types/node": "20.12.12",
     "@types/react": "18.3.2",
