--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
  NEXT_PUBLIC_BACKEND_API_URL=http://178.239.151.39/api/v1/
- NEXT_PUBLIC_IMAGE_BASE_URL=""
+ NEXT_PUBLIC_IMAGE_BASE_URL=https://c778665.parspack.net/c778665
