--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@dnd-kit/core": "^6.1.0",
+    "@dnd-kit/sortable": "^8.0.0",
+    "@dnd-kit/utilities": "^3.2.2",
     "@glidejs/glide": "^3.6.0",
     "@headlessui/react": "^2.0.3",
     "@heroicons/react": "^2.1.3",
@@ -33,7 +36,10 @@
     "next": "^14.2.3",
     "rc-slider": "^10.6.2",
     "react": "18.3.1",
+    "react-beautiful-dnd": "^13.1.1",
     "react-chartjs-2": "^5.2.0",
+    "react-dnd": "^16.0.1",
+    "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "18.3.1",
     "react-hooks-global-state": "^2.1.0",
     "react-hot-toast": "^2.4.1",
