--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "react-use": "^17.5.0",
     "react-use-keypress": "^1.3.1",
     "sass": "^1.77.2",
+    "swiper": "^11.1.14",
     "typescript": "5.4.5"
   },
   "devDependencies": {
