--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "jalali-moment": "^3.3.11",
     "moment": "^2.30.1",
     "next": "^14.2.3",
+    "pigeon-maps": "^0.21.6",
     "rc-slider": "^10.6.2",
     "react": "18.3.1",
     "react-chartjs-2": "^5.2.0",
