--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "react-icons": "^5.3.0",
     "react-paginate": "^8.2.0",
     "react-query": "^3.39.3",
+    "react-select": "^5.9.0",
     "react-spinners": "^0.14.1",
     "react-swipeable": "^7.0.1",
     "react-use": "^17.5.0",
