--- a/package.json
+++ b/package.json
@@ -31,7 +31,9 @@
     "cookies-next": "^4.2.1",
     "dotenv": "^16.4.5",
     "framer-motion": "^11.2.4",
+    "html2canvas": "^1.4.1",
     "jalali-moment": "^3.3.11",
+    "jspdf": "^2.5.2",
     "moment": "^2.30.1",
     "next": "^14.2.3",
     "pigeon-maps": "^0.21.6",
