--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "postbuild": "next-sitemap"
   },
   "dependencies": {
     "@dnd-kit/core": "^6.1.0",
@@ -36,6 +37,7 @@
     "jspdf": "^2.5.2",
     "moment": "^2.30.1",
     "next": "^14.2.3",
+    "next-sitemap": "^4.2.3",
     "pigeon-maps": "^0.21.6",
     "rc-slider": "^10.6.2",
     "react": "18.3.1",
