--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.2.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
@@ -23,8 +23,8 @@
     "@tinymce/tinymce-react": "^5.1.1",
     "@types/glidejs__glide": "^3.6.5",
     "@types/node": "20.12.12",
-    "@types/react": "18.3.2",
-    "@types/react-dom": "18.3.0",
+    "@types/react": "19.0.3",
+    "@types/react-dom": "19.0.2",
     "axios": "^1.7.4",
     "beautiful-react-hooks": "^5.0.2",
     "chart.js": "^4.4.4",
@@ -36,13 +36,13 @@
     "jalali-moment": "^3.3.11",
     "jspdf": "^2.5.2",
     "moment": "^2.30.1",
-    "next": "^14.2.3",
+    "next": "15.1.3",
     "next-sitemap": "^4.2.3",
     "pigeon-maps": "^0.21.6",
     "rc-slider": "^10.6.2",
-    "react": "18.3.1",
+    "react": "19.0.0",
     "react-chartjs-2": "^5.2.0",
-    "react-dom": "18.3.1",
+    "react-dom": "19.0.0",
     "react-hooks-global-state": "^2.1.0",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.3.0",
@@ -60,8 +60,12 @@
   "devDependencies": {
     "autoprefixer": "^10.4.19",
     "eslint": "^8.57.0",
-    "eslint-config-next": "14.2.3",
+    "eslint-config-next": "15.1.3",
     "postcss": "^8.4.38",
     "tailwindcss": "^3.4.3"
+  },
+  "overrides": {
+    "@types/react": "19.0.3",
+    "@types/react-dom": "19.0.2"
   }
 }
