--- a/package.json
+++ b/package.json
@@ -1,71 +1,70 @@
 {
-  "name": "ciseco-nextjs",
-  "version": "1.2.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev --turbopack",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint",
-    "postbuild": "next-sitemap"
-  },
-  "dependencies": {
-    "@dnd-kit/core": "^6.1.0",
-    "@dnd-kit/sortable": "^8.0.0",
-    "@dnd-kit/utilities": "^3.2.2",
-    "@glidejs/glide": "^3.6.0",
-    "@headlessui/react": "^2.2.0",
-    "@heroicons/react": "^2.1.3",
-    "@reduxjs/toolkit": "^2.2.5",
-    "@tailwindcss/aspect-ratio": "^0.4.2",
-    "@tailwindcss/forms": "^0.5.7",
-    "@tailwindcss/typography": "^0.5.13",
-    "@tinymce/tinymce-react": "^5.1.1",
-    "@types/glidejs__glide": "^3.6.5",
-    "@types/node": "20.12.12",
-    "@types/react": "19.0.3",
-    "@types/react-dom": "19.0.2",
-    "axios": "^1.7.4",
-    "beautiful-react-hooks": "^5.0.2",
-    "chart.js": "^4.4.4",
-    "chartjs-adapter-moment": "^1.0.1",
-    "cookies-next": "^4.2.1",
-    "dotenv": "^16.4.5",
-    "framer-motion": "^11.2.4",
-    "html2canvas": "^1.4.1",
-    "jalali-moment": "^3.3.11",
-    "jspdf": "^2.5.2",
-    "moment": "^2.30.1",
-    "next": "15.1.3",
-    "next-sitemap": "^4.2.3",
-    "pigeon-maps": "^0.21.6",
-    "rc-slider": "^10.6.2",
-    "react": "19.0.0",
-    "react-chartjs-2": "^5.2.0",
-    "react-dom": "19.0.0",
-    "react-hooks-global-state": "^2.1.0",
-    "react-hot-toast": "^2.4.1",
-    "react-icons": "^5.3.0",
-    "react-paginate": "^8.2.0",
-    "react-query": "^3.39.3",
-    "react-select": "^5.9.0",
-    "react-spinners": "^0.14.1",
-    "react-swipeable": "^7.0.1",
-    "react-use": "^17.5.0",
-    "react-use-keypress": "^1.3.1",
-    "sass": "^1.77.2",
-    "swiper": "^11.1.14",
-    "typescript": "5.4.5"
-  },
-  "devDependencies": {
-    "autoprefixer": "^10.4.19",
-    "eslint": "^8.57.0",
-    "eslint-config-next": "15.1.3",
-    "postcss": "^8.4.38",
-    "tailwindcss": "^3.4.3"
-  },
-  "overrides": {
-    "@types/react": "19.0.3",
-    "@types/react-dom": "19.0.2"
-  }
+    "name": "tajhizland",
+    "version": "0.1.0",
+    "private": true,
+    "scripts": {
+        "dev": "next dev --turbopack",
+        "build": "next build",
+        "start": "next start",
+        "lint": "next lint"
+    },
+    "dependencies": {
+        "react": "^19.0.0",
+        "react-dom": "^19.0.0",
+        "next": "15.1.4",
+        "@dnd-kit/core": "^6.1.0",
+        "@dnd-kit/sortable": "^8.0.0",
+        "@dnd-kit/utilities": "^3.2.2",
+        "@glidejs/glide": "^3.6.0",
+        "@headlessui/react": "^2.2.0",
+        "@heroicons/react": "^2.1.3",
+        "@reduxjs/toolkit": "^2.2.5",
+        "@tailwindcss/aspect-ratio": "^0.4.2",
+        "@tailwindcss/forms": "^0.5.7",
+        "@tailwindcss/typography": "^0.5.13",
+        "@tinymce/tinymce-react": "^5.1.1",
+        "@types/glidejs__glide": "^3.6.5",
+        "@types/node": "20.12.12",
+        "@types/react": "19.0.3",
+        "@types/react-dom": "19.0.2",
+        "axios": "^1.7.4",
+        "beautiful-react-hooks": "^5.0.2",
+        "chart.js": "^4.4.4",
+        "chartjs-adapter-moment": "^1.0.1",
+        "cookies-next": "^4.2.1",
+        "dotenv": "^16.4.5",
+        "framer-motion": "^11.2.4",
+        "html2canvas": "^1.4.1",
+        "jalali-moment": "^3.3.11",
+        "jspdf": "^2.5.2",
+        "moment": "^2.30.1",
+        "next-sitemap": "^4.2.3",
+        "pigeon-maps": "^0.21.6",
+        "rc-slider": "^10.6.2",
+        "react-chartjs-2": "^5.2.0",
+        "react-hooks-global-state": "^2.1.0",
+        "react-hot-toast": "^2.4.1",
+        "react-icons": "^5.3.0",
+        "react-paginate": "^8.2.0",
+        "react-query": "^3.39.3",
+        "react-select": "^5.9.0",
+        "react-spinners": "^0.14.1",
+        "react-swipeable": "^7.0.1",
+        "react-use": "^17.5.0",
+        "react-use-keypress": "^1.3.1",
+        "sass": "^1.77.2",
+        "swiper": "^11.1.14",
+        "typescript": "5.4.5"
+    },
+    "devDependencies": {
+        "typescript": "^5",
+        "@types/node": "^20",
+        "@types/react": "^19",
+        "@types/react-dom": "^19",
+        "postcss": "^8",
+        "tailwindcss": "^3.4.1",
+        "eslint": "^9",
+        "eslint-config-next": "15.1.4",
+        "@eslint/eslintrc": "^3"
+    }
 }
