--- a/package.json
+++ b/package.json
@@ -9,9 +9,6 @@
         "lint": "next lint"
     },
     "dependencies": {
-        "react": "18.3.1",
-        "react-dom": "18.3.1",
-        "next": "15.1.4",
         "@dnd-kit/core": "^6.1.0",
         "@dnd-kit/sortable": "^8.0.0",
         "@dnd-kit/utilities": "^3.2.2",
@@ -38,10 +35,13 @@
         "jalali-moment": "^3.3.11",
         "jspdf": "^2.5.2",
         "moment": "^2.30.1",
+        "next": "15.1.4",
         "next-sitemap": "^4.2.3",
         "pigeon-maps": "^0.21.6",
         "rc-slider": "^10.6.2",
+        "react": "18.3.1",
         "react-chartjs-2": "^5.2.0",
+        "react-dom": "18.3.1",
         "react-hooks-global-state": "^2.1.0",
         "react-hot-toast": "^2.4.1",
         "react-icons": "^5.3.0",
@@ -53,18 +53,20 @@
         "react-use": "^17.5.0",
         "react-use-keypress": "^1.3.1",
         "sass": "^1.77.2",
+        "suneditor": "^2.47.5",
+        "suneditor-react": "^3.6.1",
         "swiper": "^11.1.14",
         "typescript": "5.4.5"
     },
     "devDependencies": {
-        "typescript": "^5",
+        "@eslint/eslintrc": "^3",
         "@types/node": "^20",
         "@types/react": "^19",
         "@types/react-dom": "^19",
-        "postcss": "^8",
-        "tailwindcss": "^3.4.1",
         "eslint": "^9",
         "eslint-config-next": "15.1.4",
-        "@eslint/eslintrc": "^3"
+        "postcss": "^8",
+        "tailwindcss": "^3.4.1",
+        "typescript": "^5"
     }
 }
