--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
         "@dnd-kit/core": "^6.1.0",
         "@dnd-kit/sortable": "^8.0.0",
         "@dnd-kit/utilities": "^3.2.2",
+        "@ducanh2912/next-pwa": "^10.2.9",
         "@glidejs/glide": "^3.6.0",
         "@headlessui/react": "^2.2.0",
         "@heroicons/react": "^2.1.3",
@@ -21,6 +22,7 @@
         "@tailwindcss/typography": "^0.5.13",
         "@tinymce/tinymce-react": "^5.1.1",
         "@types/glidejs__glide": "^3.6.5",
+        "@types/next-pwa": "^5.6.9",
         "@types/node": "20.12.12",
         "@types/react": "19.0.3",
         "@types/react-dom": "19.0.2",
@@ -36,6 +38,7 @@
         "jspdf": "^2.5.2",
         "moment": "^2.30.1",
         "next": "15.1.4",
+        "next-pwa": "^5.6.0",
         "next-sitemap": "^4.2.3",
         "pigeon-maps": "^0.21.6",
         "rc-slider": "^10.6.2",
