--- a/package.json
+++ b/package.json
@@ -55,7 +55,8 @@
         "sass": "^1.77.2",
         "suneditor": "^2.47.5",
         "suneditor-react": "^3.6.1",
-        "swiper": "^11.1.14"
+        "swiper": "^11.1.14",
+        "video.js": "^8.21.0"
     },
     "devDependencies": {
         "@eslint/eslintrc": "^3",
