--- a/public/manifest.json
+++ b/public/manifest.json
@@ -11,28 +11,28 @@
     "purpose": "any maskable",
     "icons": [
         {
-            "src": "/icons/logo.png",
+            "src": "/icons/144.png",
             "sizes": "144x144",
             "type": "image/png"
         },
         {
-            "src": "/icons/logo.png",
+            "src": "/icons/180.png",
             "sizes": "180x180",
             "type": "image/png",
             "purpose": "any maskable"
         },
         {
-            "src": "/icons/logo.png",
+            "src": "/icons/192.png",
             "sizes": "192x192",
             "type": "image/png"
         },
         {
-            "src": "/icons/logo.png",
+            "src": "/icons/384.png",
             "sizes": "384x384",
             "type": "image/png"
         },
         {
-            "src": "/icons/logo.png",
+            "src": "/icons/512.png",
             "sizes": "512x512",
             "type": "image/png"
         }
