--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
         "react-hooks-global-state": "^2.1.0",
         "react-hot-toast": "^2.4.1",
         "react-icons": "^5.3.0",
+        "react-multi-date-picker": "^4.5.2",
         "react-paginate": "^8.2.0",
         "react-query": "^3.39.3",
         "react-select": "^5.9.0",
