--- a/public/manifest.json
+++ b/public/manifest.json
@@ -28,8 +28,7 @@
     {
       "src": "/icons/144.png",
       "sizes": "144x144",
-      "type": "image/png",
-      "purpose": "any maskable"
+      "type": "image/png"
 
     },
     {
