--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
- NEXT_PUBLIC_BACKEND_API_URL=https://api.tajhizland.com/api/v1/
+ NEXT_PUBLIC_BACKEND_API_URL=https://www.api.tajhizland.com/api/v1/
  NEXT_PUBLIC_WEBSITE_URL=https://tajhizland.com
  NEXT_PUBLIC_IMAGE_BASE_URL=https://c778665.parspack.net/c778665
