--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
         "chart.js": "^4.4.4",
         "chartjs-adapter-moment": "^1.0.1",
         "cookies-next": "^4.2.1",
+        "dayjs": "^1.11.13",
         "dotenv": "^16.4.5",
         "framer-motion": "^11.2.4",
         "html2canvas": "^1.4.1",
