--- a/.github/workflows/next-ci-cd.yml
+++ b/.github/workflows/next-ci-cd.yml
@@ -16,7 +16,7 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
 
-      - name: Deploy to Server (SSH)
+      - name: SSH and Build
         uses: appleboy/ssh-action@v0.1.6
         with:
           host: ${{ secrets.SSH_HOST }}
@@ -24,7 +24,17 @@ jobs:
           password: ${{ secrets.SSH_PASSWORD }}
           script: |
             cd /var/www/html/Frontend
-            git pull frontend master
+            git pull origin master
             npm i -f
             npm run build
+
+      - name: Restart PM2
+        if: success()
+        uses: appleboy/ssh-action@v0.1.6
+        with:
+          host: ${{ secrets.SSH_HOST }}
+          username: ${{ secrets.SSH_USER }}
+          password: ${{ secrets.SSH_PASSWORD }}
+          script: |
+            cd /var/www/html/Frontend
             pm2 restart front
