--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
         "react": "^19.0.0",
         "react-chartjs-2": "^5.2.0",
         "react-dom": "^19.0.0",
+        "react-hook-form": "^7.62.0",
         "react-hooks-global-state": "^2.1.0",
         "react-hot-toast": "^2.4.1",
         "react-icons": "^5.3.0",
