--- a/package.json
+++ b/package.json
@@ -44,12 +44,14 @@
         "react": "^19.0.0",
         "react-chartjs-2": "^5.2.0",
         "react-dom": "^19.0.0",
+        "react-h5-audio-player": "^3.10.1",
         "react-hook-form": "^7.62.0",
         "react-hooks-global-state": "^2.1.0",
         "react-hot-toast": "^2.4.1",
         "react-icons": "^5.3.0",
         "react-multi-date-picker": "^4.5.2",
         "react-paginate": "^8.2.0",
+        "react-player": "^3.4.0",
         "react-query": "^3.39.3",
         "react-select": "^5.9.0",
         "react-spinners": "^0.14.1",
